// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppViewComponent when app info is null loading spinner matches the snapshot 1`] = `
<LoadingWrapper
  loaded={false}
>
  <section
    className="AppView padding-b-big"
  >
    <main>
      <div
        className="container"
      >
        <div
          className="row collapse-b-tablet"
        >
          <div
            className="col-3"
          >
            <ChartInfo
              app={
                Object {
                  "hooks": Array [],
                  "info": null,
                  "namespace": "weee",
                }
              }
            />
          </div>
          <div
            className="col-9"
          >
            <div
              className="row padding-t-bigger"
            >
              <div
                className="col-4"
              >
                <DeploymentStatus
                  deployments={Array []}
                  info={null}
                />
              </div>
              <div
                className="col-8 text-r"
              >
                <AppControls
                  app={
                    Object {
                      "hooks": Array [],
                      "info": null,
                      "namespace": "weee",
                    }
                  }
                  deleteApp={[Function]}
                />
              </div>
            </div>
            <ServiceTable
              extended={false}
              services={Map {}}
            />
            <AppNotes
              notes={null}
            />
            <AppDetails
              deployments={Map {}}
              otherResources={Map {}}
              services={Map {}}
            />
          </div>
        </div>
      </div>
    </main>
  </section>
</LoadingWrapper>
`;

exports[`AppViewComponent when otherResources is null loading spinner matches the snapshot 1`] = `
<LoadingWrapper
  loaded={false}
>
  <section
    className="AppView padding-b-big"
  >
    <main>
      <div
        className="container"
      >
        <div
          className="row collapse-b-tablet"
        >
          <div
            className="col-3"
          >
            <ChartInfo
              app={
                Object {
                  "info": Object {},
                  "namespace": "weee",
                }
              }
            />
          </div>
          <div
            className="col-9"
          >
            <div
              className="row padding-t-bigger"
            >
              <div
                className="col-4"
              >
                <DeploymentStatus
                  deployments={Array []}
                  info={Object {}}
                />
              </div>
              <div
                className="col-8 text-r"
              >
                <AppControls
                  app={
                    Object {
                      "info": Object {},
                      "namespace": "weee",
                    }
                  }
                  deleteApp={[Function]}
                />
              </div>
            </div>
            <ServiceTable
              extended={false}
              services={Map {}}
            />
            <AppNotes
              notes={null}
            />
            <AppDetails
              deployments={Map {}}
              otherResources={null}
              services={Map {}}
            />
          </div>
        </div>
      </div>
    </main>
  </section>
</LoadingWrapper>
`;
